# sks_lib

./: .gitignore  Makefile.am  Makefile.raw  configure.ac  optee_cryptoki.pc.in
lib/: Makefile.am  Makefile.raw  ck_debug.c  ck_helpers.c  ck_helpers.h  ck_requests.c  ck_requests.h  handle.c  handle.h  helpers_ck.c  helpers_ck.h  invoke_ta.c  invoke_ta.h  local_utils.h  pkcs11_api.c  pkcs11_token.c  pkcs11_token.h  sanitize_object.c  sanitize_object.h  serialize_ck.c  serialize_ck.h  serializer.c  serializer.h
lib/include/: sks_abi.h  sks_ck_debug.h  sks_ta.h
lib/include/pkcs11/: pkcs11.h
test/: Makefile.am  Makefile.raw  sks-test.c  test-objects.c
